--- a/index.html
+++ b/index.html
@@ -1,203 +1,230 @@
 <!doctype html>
 <html lang="tr">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Spark Ad Studio — Fikir yaz, AI reklamını oluştursun</title>
-  <meta name="description" content="Spark Ad Studio — Fikir yaz, AI reklamını oluştursun. Hızlı, basit ve etkili reklam metinleri üretin.">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Spark Ad Studio — Uygulama</title>
   <style>
     :root{
-      --bg:#0f1724;
-      --card-bg:rgba(255,255,255,0.03);
-      --muted:rgba(255,255,255,0.7);
-      --glass:rgba(255,255,255,0.04);
-      --accent:linear-gradient(90deg,#6EE7B7,#3B82F6);
-      --radius:14px;
-      --shadow: 0 6px 18px rgba(2,6,23,0.6);
+      --bg:#0b1220; --card:rgba(255,255,255,.06); --muted:rgba(255,255,255,.72);
+      --border:rgba(255,255,255,.10); --r:16px; --sh:0 12px 30px rgba(0,0,0,.35);
+      --free1:#3b82f6; --free2:#22c55e; --inf1:#c026d3; --inf2:#ec4899; --pro1:#f59e0b; --pro2:#fde68a;
     }
     *{box-sizing:border-box}
-    html,body{height:100%}
     body{
-      margin:0;
-      font-family:'Inter',system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;
-      background: radial-gradient(1200px 500px at 10% 10%, rgba(99,102,241,0.12), transparent 10%),
-                  radial-gradient(1000px 400px at 90% 90%, rgba(236,72,153,0.08), transparent 12%),
-                  var(--bg);
-      color:#fff;
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-      padding:48px 24px;
+      margin:0; font-family:system-ui,Segoe UI,Arial; color:#fff; background:
+        radial-gradient(900px 480px at 10% 10%, rgba(59,130,246,.18), transparent 40%),
+        radial-gradient(900px 480px at 90% 90%, rgba(236,72,153,.14), transparent 40%),
+        var(--bg);
+      padding:24px;
     }
-
-    /* Container */
-    .container{max-width:1100px;margin:0 auto}
-
-    /* Header */
-    .hero{
-      display:grid;grid-template-columns:1fr 380px;gap:32px;align-items:center;margin-bottom:48px;
+    .wrap{max-width:1100px;margin:0 auto}
+    .top{
+      display:flex; gap:14px; align-items:center; justify-content:space-between;
+      padding:14px 16px; border:1px solid var(--border); border-radius:var(--r);
+      background:rgba(255,255,255,.04); box-shadow:var(--sh);
+      position:sticky; top:14px; backdrop-filter: blur(10px); z-index:5;
     }
-    @media (max-width:880px){
-      .hero{grid-template-columns:1fr;gap:20px;text-align:center}
+    .brand{display:flex;gap:12px;align-items:center}
+    .logo{width:42px;height:42px;border-radius:12px;display:grid;place-items:center;
+      background:linear-gradient(135deg,#3b82f6,#a78bfa); font-weight:900}
+    .title{font-weight:900;letter-spacing:-.02em}
+    .sub{font-size:12px;color:var(--muted)}
+    .controls{display:flex;gap:10px;align-items:center;flex-wrap:wrap;justify-content:flex-end}
+    select,button,textarea{
+      font:inherit; color:#fff; background:rgba(255,255,255,.06);
+      border:1px solid var(--border); border-radius:12px; padding:10px 12px;
     }
-    .brand{
-      background:linear-gradient(180deg,rgba(255,255,255,0.06),transparent);
-      border-radius:12px;padding:18px 16px;display:inline-flex;align-items:center;gap:12px;margin-bottom:18px;
-      box-shadow: var(--shadow);
+    select{cursor:pointer}
+    button{cursor:pointer; font-weight:900}
+    button.primary{
+      border:0; background:linear-gradient(90deg,#22c55e,#3b82f6);
+      color:#07151f; padding:10px 14px;
     }
-    .logo{width:44px;height:44px;border-radius:10px;display:inline-grid;place-items:center;background:linear-gradient(135deg,#3B82F6,#A78BFA);font-weight:700;color:#fff}
-    h1{font-size:44px;line-height:1.03;margin:0 0 10px 0;font-weight:800;letter-spacing:-0.02em}
-    @media (max-width:480px){h1{font-size:32px}}
-    p.lead{margin:0;color:var(--muted);font-size:18px}
-
-    .cta-box{background:var(--card-bg);padding:24px;border-radius:14px;box-shadow:var(--shadow);display:flex;flex-direction:column;gap:12px}
-    .cta-cta{display:flex;gap:12px;align-items:center;justify-content:flex-start}
-    .btn{border:0;padding:12px 16px;border-radius:10px;font-weight:700;cursor:pointer}
-    .btn-primary{background:linear-gradient(90deg,#06b6d4,#3b82f6);color:#07263a}
-    .btn-outline{background:transparent;border:1px solid rgba(255,255,255,0.08);color:var(--muted)}
-    .small{font-size:13px;color:var(--muted)}
-
-    /* Packages */
-    .packages{display:grid;grid-template-columns:repeat(3,1fr);gap:18px;margin-top:30px}
-    @media (max-width:880px){.packages{grid-template-columns:1fr}}
-    .card{border-radius:14px;padding:22px;position:relative;background:var(--glass);box-shadow:var(--shadow);overflow:hidden;border:1px solid rgba(255,255,255,0.03)}
-    .ribbon{position:absolute;top:18px;right:18px;padding:6px 10px;border-radius:999px;font-weight:700;font-size:13px;box-shadow:0 4px 14px rgba(2,6,23,0.45)}
-    .card h3{margin:0 0 6px 0;font-size:20px}
-    .price{font-weight:800;font-size:26px;margin:8px 0}
-    .features{color:var(--muted);font-size:14px;margin:12px 0}
-    .card .buy{display:inline-block;margin-top:12px}
-
-    /* Specific colors */
-    .free{background:linear-gradient(180deg,rgba(59,130,246,0.12),transparent);border:1px solid rgba(59,130,246,0.18)}
-    .free .ribbon{background:#3B82F6;color:white}
-
-    .influencer{background:linear-gradient(180deg,rgba(192,38,211,0.12),rgba(236,72,153,0.04));border:1px solid rgba(192,38,211,0.18)}
-    .influencer .ribbon{background:linear-gradient(90deg,#C026D3,#EC4899);color:#fff}
-
-    .pro{background:linear-gradient(180deg,rgba(245,158,11,0.10),transparent);border:1px solid rgba(245,158,11,0.18)}
-    .pro .ribbon{background:linear-gradient(90deg,#F59E0B,#FDE68A);color:#1b1b1b}
-
-    /* subtext */
-    .muted{color:var(--muted);font-size:13px}
-
-    /* Footer */
-    footer{margin-top:48px;text-align:center;color:rgba(255,255,255,0.6);font-size:13px}
-
-    /* Small touches */
-    .badge{display:inline-block;background:rgba(255,255,255,0.04);padding:6px 10px;border-radius:999px;font-weight:700;font-size:13px}
-    .grid-2{display:grid;grid-template-columns:1fr 1fr;gap:10px}
-    @media (max-width:540px){.grid-2{grid-template-columns:1fr}}
+    button:disabled{opacity:.55;cursor:not-allowed}
+    .grid{display:grid;grid-template-columns:1.1fr .9fr;gap:16px;margin-top:16px}
+    @media (max-width:900px){.grid{grid-template-columns:1fr}}
+    .panel{
+      border:1px solid var(--border); border-radius:var(--r);
+      background:rgba(255,255,255,.04); box-shadow:var(--sh);
+      padding:16px;
+    }
+    h2{margin:0 0 10px 0;font-size:18px}
+    .muted{color:var(--muted);font-size:13px;line-height:1.4}
+    .packs{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:12px}
+    @media (max-width:900px){.packs{grid-template-columns:1fr}}
+    .pack{
+      padding:14px; border-radius:14px; border:1px solid var(--border);
+      background:rgba(255,255,255,.04);
+      position:relative; overflow:hidden; cursor:pointer;
+      transition: transform .08s ease;
+    }
+    .pack:hover{transform: translateY(-2px)}
+    .pack.active{outline:2px solid rgba(255,255,255,.35)}
+    .tag{
+      position:absolute; top:12px; right:12px; padding:6px 10px; border-radius:999px;
+      font-size:12px; font-weight:900; background:rgba(255,255,255,.10);
+    }
+    .pack.free{border-color:rgba(59,130,246,.35)}
+    .pack.free .tag{background:linear-gradient(90deg,var(--free1),var(--free2))}
+    .pack.inf{border-color:rgba(192,38,211,.35)}
+    .pack.inf .tag{background:linear-gradient(90deg,var(--inf1),var(--inf2))}
+    .pack.pro{border-color:rgba(245,158,11,.35)}
+    .pack.pro .tag{background:linear-gradient(90deg,var(--pro1),var(--pro2)); color:#111827}
+    .pname{font-weight:900}
+    .pprice{font-size:22px;font-weight:900;margin:6px 0}
+    .pillrow{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px}
+    .pill{font-size:12px;color:var(--muted);border:1px solid var(--border);padding:6px 10px;border-radius:999px}
+    textarea{width:100%;min-height:140px;resize:vertical}
+    .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap;margin-top:10px}
+    .status{font-size:12px;color:var(--muted)}
+    .out{
+      white-space:pre-wrap; background:rgba(0,0,0,.25);
+      border:1px solid var(--border); border-radius:14px;
+      padding:14px; min-height:220px;
+    }
+    .kreditxt{font-weight:900}
   </style>
 </head>
 <body>
-  <div class="container">
-    <header class="hero">
-      <div>
-        <div class="brand">
-          <div class="logo">S</div>
-          <div>
-            <div style="font-weight:700">Spark Ad Studio</div>
-            <div class="small">Fikir yaz, AI reklamını oluştursun</div>
-          </div>
+  <div class="wrap">
+    <div class="top">
+      <div class="brand">
+        <div class="logo">S</div>
+        <div>
+          <div class="title">Spark Ad Studio</div>
+          <div class="sub">Uygulama ekranı (AI bağlantısı sonra n8n)</div>
         </div>
-
-        <h1>Spark Ad Studio</h1>
-        <p class="lead">Fikir yaz, AI reklamını oluştursun. Tek tıkla kısa metinler, başlıklar ve görsel açıklamaları oluştur — hızla test et, ölçeklendir.</p>
-
-        <div style="margin-top:18px;display:flex;gap:12px;flex-wrap:wrap">
-          <button class="btn btn-primary">Başla — Ücretsiz</button>
-          <button class="btn btn-outline">Demosunu Gör</button>
-        </div>
-
-        <div style="margin-top:18px;color:var(--muted);font-size:14px">Ücretsiz planı deneyin; ihtiyaç artarsa Influencer veya Pro'ya yükseltin.</div>
       </div>
 
-      <aside class="cta-box">
-        <div style="display:flex;justify-content:space-between;align-items:center">
-          <div>
-            <div style="font-weight:800;font-size:18px">Hızlı Başlangıç</div>
-            <div class="small">30 saniyede reklam metni oluşturun</div>
+      <div class="controls">
+        <select id="theme">
+          <option value="influencer">Influencer</option>
+          <option value="oyun">Oyun</option>
+          <option value="marka">Marka</option>
+          <option value="okul">Okul</option>
+        </select>
+
+        <select id="format">
+          <option value="ad">Reklam Metni (Başlık + Açıklama + CTA)</option>
+          <option value="post">Sosyal Medya Postu</option>
+          <option value="script">15sn Video Metni</option>
+        </select>
+
+        <button class="primary" id="run">ÜRET</button>
+      </div>
+    </div>
+
+    <div class="grid">
+      <div class="panel">
+        <h2>Paket Seç</h2>
+        <div class="muted">
+          Free: <span class="kreditxt">5 kredi</span> · Influencer: <span class="kreditxt">100 kredi</span> · Pro: <span class="kreditxt">sınırsız</span>
+          <br><span class="muted">Şu an demo çalışır. AI bağlantısı sonra eklenecek.</span>
+        </div>
+
+        <div class="packs" id="packs">
+          <div class="pack free active" data-pack="free" data-credit="5">
+            <div class="tag">Free</div>
+            <div class="pname">Free</div>
+            <div class="pprice">Ücretsiz</div>
+            <div class="pillrow"><div class="pill">Günlük 5 kredi</div><div class="pill">Temel metin</div></div>
           </div>
-          <div class="badge">Yeni</div>
-        </div>
 
-        <div class="grid-2" style="margin-top:8px">
-          <div>
-            <div style="font-weight:700">Günlük kredi</div>
-            <div class="muted">Ücretsiz: 5, Influencer: 100, Pro: Sınırsız</div>
+          <div class="pack inf" data-pack="influencer" data-credit="100">
+            <div class="tag">Influencer</div>
+            <div class="pname">Influencer</div>
+            <div class="pprice">₺199 / ay</div>
+            <div class="pillrow"><div class="pill">Günlük 100 kredi</div><div class="pill">Daha güçlü ton</div></div>
           </div>
-          <div>
-            <div style="font-weight:700">Formatlar</div>
-            <div class="muted">Başlık, Açıklama, CTA, Görsel açıklaması</div>
-          </div>
-        </div>
 
-        <div style="display:flex;gap:8px;align-items:center;justify-content:flex-end;margin-top:6px">
-          <button class="btn btn-outline">Özellikler</button>
-          <button class="btn btn-primary">Hemen Başla</button>
-        </div>
-      </aside>
-    </header>
-
-    <main>
-      <section>
-        <div style="display:flex;align-items:center;justify-content:space-between;gap:12px">
-          <h2 style="margin:0;font-size:20px">Paketler</h2>
-          <div class="small">İhtiyacına uygun planı seç — yükseltmesi kolay.</div>
-        </div>
-
-        <div class="packages" style="margin-top:18px">
-          <article class="card free">
-            <div class="ribbon">Free</div>
-            <h3>Free</h3>
-            <div class="price">Ücretsiz</div>
-            <div class="features">Günlük 5 kredi • Temel reklam metinleri • Email desteği</div>
-            <div class="muted">Başlangıç için ideal — dene, fikir üret ve test et.</div>
-            <div class="buy"><button class="btn btn-primary">Kaydol</button></div>
-          </article>
-
-          <article class="card influencer">
-            <div class="ribbon">Influencer</div>
-            <h3>Influencer</h3>
-            <div class="price">₺199 / ay</div>
-            <div class="features">Günlük 100 kredi • İleri başlık & açıklama üretimi • Öncelikli destek</div>
-            <div class="muted">İçerik üretimi yoğun olanlar için optimize edildi.</div>
-            <div class="buy"><button class="btn btn-primary">Yükselt</button></div>
-          </article>
-
-          <article class="card pro">
-            <div class="ribbon">Pro</div>
-            <h3>Pro</h3>
-            <div class="price">₺699 / ay</div>
-            <div class="features">Sınırsız kredi • Özelleştirilmiş ton & strateji • 1:1 danışmanlık</div>
-            <div class="muted">Ajanslar ve profesyoneller için gelişmiş araçlar.</div>
-            <div class="buy"><button class="btn btn-primary">Talep Et</button></div>
-          </article>
-        </div>
-      </section>
-
-      <section style="margin-top:36px;display:flex;gap:18px;flex-wrap:wrap;align-items:center;justify-content:space-between">
-        <div style="flex:1;min-width:220px">
-          <h3 style="margin:0 0 6px 0">Nasıl çalışır?</h3>
-          <p class="muted">Fikrini yaz. Ton, uzunluk ve hedef seçimini ayarla. AI birkaç saniye içinde farklı reklam versiyonları üretir; test et, en iyi olanı kullan.</p>
-        </div>
-        <div style="min-width:200px">
-          <div style="display:flex;gap:10px;align-items:center">
-            <div style="width:36px;height:36px;border-radius:8px;background:linear-gradient(90deg,#06b6d4,#3b82f6);display:grid;place-items:center">⚡</div>
-            <div>
-              <div style="font-weight:700">Hızlı</div>
-              <div class="muted">Dakikalar içinde reklam hazır</div>
-            </div>
+          <div class="pack pro" data-pack="pro" data-credit="∞">
+            <div class="tag">Pro</div>
+            <div class="pname">Pro</div>
+            <div class="pprice">₺699 / ay</div>
+            <div class="pillrow"><div class="pill">Sınırsız</div><div class="pill">Varyasyon</div></div>
           </div>
         </div>
-      </section>
-    </main>
 
-    <footer>
-      © 2025 Spark Ad Studio — Tüm hakları saklıdır. · Gizlilik Politikası · Kullanım Şartları
-    </footer>
+        <h2 style="margin-top:16px">Fikrini Yaz</h2>
+        <div class="muted">Örn: “13-14 yaşa hitap eden komik bir oyun reklamı”</div>
+        <textarea id="prompt" placeholder="Fikrini buraya yaz..."></textarea>
+
+        <div class="row">
+          <div class="status" id="status">Hazır.</div>
+        </div>
+      </div>
+
+      <div class="panel">
+        <h2>Sonuç</h2>
+        <div class="muted">Şimdilik demo üretir. Sonra n8n’den gerçek AI cevabı gelecek.</div>
+        <div class="out" id="out"></div>
+      </div>
+    </div>
   </div>
+
+<script>
+  const $ = (id) => document.getElementById(id);
+
+  // Paket seçimi
+  let selectedPack = "free";
+  let creditsLeft = 5;
+
+  const packEls = [...document.querySelectorAll(".pack")];
+  function setPack(el){
+    packEls.forEach(x => x.classList.remove("active"));
+    el.classList.add("active");
+    selectedPack = el.dataset.pack;
+    creditsLeft = el.dataset.credit === "∞" ? Infinity : Number(el.dataset.credit);
+    $("status").textContent = `Paket: ${selectedPack} • Kredi: ${creditsLeft === Infinity ? "Sınırsız" : creditsLeft}`;
+  }
+  packEls.forEach(el => el.addEventListener("click", () => setPack(el)));
+  $("status").textContent = `Paket: ${selectedPack} • Kredi: ${creditsLeft}`;
+
+  // Demo üretici (AI yok)
+  function demoGenerate({prompt, theme, format, pack}){
+    const tone =
+      theme === "oyun" ? "Hype + komik genç dili" :
+      theme === "influencer" ? "IG/TikTok enerjik dili" :
+      theme === "marka" ? "Güven veren profesyonel" : "Okul/kulüp resmi dili";
+
+    if(format === "ad"){
+      return `🎯 Tema: ${theme} (${tone})\n📦 Paket: ${pack}\n\n1) Başlık Önerileri:\n- ${prompt} — şimdi keşfet!\n- ${prompt} — kaçırma!\n- ${prompt} — hemen dene!\n\n2) Açıklama:\n${prompt} için hızlı, net ve dikkat çekici bir reklam metni. 10 saniyede okut, etki bırak.\n\n3) CTA:\nHemen katıl ve dene!`;
+    }
+    if(format === "post"){
+      return `📣 ${prompt}\n\n🔥 ${tone} ile yazıldı.\n\n#sparkadstudio #reklam #icerik #viral #trend`;
+    }
+    return `🎬 15sn Video Metni\nTema: ${theme} • Paket: ${pack}\n\nSahne 1: “${prompt}” (hızlı giriş)\nSahne 2: “1-2 vurucu fayda”\nSahne 3: “Hemen dene!”`;
+  }
+
+  $("run").addEventListener("click", async () => {
+    const prompt = $("prompt").value.trim();
+    if (!prompt) return alert("Önce bir fikir yaz 🙂");
+
+    // kredi
+    if (creditsLeft !== Infinity && creditsLeft <= 0) {
+      $("out").textContent = "❌ Kredi bitti. Paket yükseltmen lazım (demo).";
+      return;
+    }
+
+    $("run").disabled = true;
+    $("status").textContent = "Üretiliyor...";
+    $("out").textContent = "";
+
+    // Şimdilik DEMO
+    const result = demoGenerate({
+      prompt,
+      theme: $("theme").value,
+      format: $("format").value,
+      pack: selectedPack
+    });
+
+    if (creditsLeft !== Infinity) creditsLeft -= 1;
+
+    $("out").textContent = result;
+    $("status").textContent = `Bitti ✅ • Kalan kredi: ${creditsLeft === Infinity ? "Sınırsız" : creditsLeft}`;
+    $("run").disabled = false;
+  });
+</script>
 </body>
 </html>
